--- a/projects/signal-ex05/src/app/login/login.component.html
+++ b/projects/signal-ex05/src/app/login/login.component.html
@@ -1,9 +1,11 @@
-<p>login works!</p>
+
 <div class="login">
 
     <div class="login-form" [formGroup]="form">
   
-      <h3>Login</h3>
+      <h3>Login Page</h3>
+      <p>email: "test&#64;devgmovile.com"</p>
+      <p>password: "test"</p>
   
       <div class="form-control">
         <label>Email:</label>
@@ -21,9 +23,7 @@
     <div class="form-actions">
       <button class="btn" routerLink="/home">Home</button>
   
-      <button class="btn" (click)="onLogin()">
-        Login
-      </button>
+      <button class="btn" (click)="onLogin()">Login</button>
   
     </div>
   
